exports[`prefer-assert-throws-block > invalid(1): import assert from 'node:assert';\nassert.throws(() => parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(1): import assert from 'node:assert';\nassert.throws(() => parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => parse(input));
    |                     ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(10): import assert from 'node:assert';\nassert.throws(async () => parseAsync(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(async () => parseAsync(input));

`;

exports[`prefer-assert-throws-block > invalid(10): import assert from 'node:assert';\nassert.throws(async () => parseAsync(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(async () => parseAsync(input));
    |                           ^^^^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

`;

exports[`prefer-assert-throws-block > invalid(11): import assert from 'node:assert';\nassert.throws(() => parse?.(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse?.(input));

`;

exports[`prefer-assert-throws-block > invalid(11): import assert from 'node:assert';\nassert.throws(() => parse?.(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => parse?.(input));
    |                     ^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	parse?.(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(12): import assert from 'node:assert';\nassert.throws(() => /* comment */ parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => /* comment */ parse(input));

`;

exports[`prefer-assert-throws-block > invalid(12): import assert from 'node:assert';\nassert.throws(() => /* comment */ parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => /* comment */ parse(input));
    |                                   ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	/* comment */ parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(13): import assert from 'node:assert';\nassert.throws(() => // comment\nparse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => // comment
  3 | parse(input));

`;

exports[`prefer-assert-throws-block > invalid(13): import assert from 'node:assert';\nassert.throws(() => // comment\nparse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => // comment
> 3 | parse(input));
    | ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

`;

exports[`prefer-assert-throws-block > invalid(14): import assert from 'node:assert';\nassert.throws(() => ({message: \"boom\"})); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => ({message: "boom"}));

`;

exports[`prefer-assert-throws-block > invalid(14): import assert from 'node:assert';\nassert.throws(() => ({message: \"boom\"})); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => ({message: "boom"}));
    |                      ^^^^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	({message: "boom"});
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(15): import assert from 'node:assert';\nassert.throws(() => function () {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => function () {});

`;

exports[`prefer-assert-throws-block > invalid(15): import assert from 'node:assert';\nassert.throws(() => function () {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => function () {});
    |                     ^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	(function () {});
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(16): import assert from 'node:assert';\nassert.throws(() => class {}); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => class {});

`;

exports[`prefer-assert-throws-block > invalid(16): import assert from 'node:assert';\nassert.throws(() => class {}); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => class {});
    |                     ^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	(class {});
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(17): import assert from 'node:assert';\nassert.throws(() => ({value} = object)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => ({value} = object));

`;

exports[`prefer-assert-throws-block > invalid(17): import assert from 'node:assert';\nassert.throws(() => ({value} = object)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => ({value} = object));
    |                      ^^^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	({value} = object);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(18): import assert from 'node:assert';\nassert.throws((): void => parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((): void => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(18): import assert from 'node:assert';\nassert.throws((): void => parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((): void => parse(input));
    |                           ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

`;

exports[`prefer-assert-throws-block > invalid(19): import assert from 'node:assert';\nassert.throws((): string => parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((): string => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(19): import assert from 'node:assert';\nassert.throws((): string => parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((): string => parse(input));
    |                             ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

`;

exports[`prefer-assert-throws-block > invalid(2): import assert from 'node:assert';\nassert.throws(() => parse(input), SyntaxError); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input), SyntaxError);

`;

exports[`prefer-assert-throws-block > invalid(2): import assert from 'node:assert';\nassert.throws(() => parse(input), SyntaxError); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => parse(input), SyntaxError);
    |                     ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	parse(input);
  4 | }, SyntaxError);

`;

exports[`prefer-assert-throws-block > invalid(20): import assert from 'node:assert';\nassert.throws(<T>() => parse(input)); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(<T>() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(20): import assert from 'node:assert';\nassert.throws(<T>() => parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(<T>() => parse(input));
    |                        ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(<T>() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(21): import assert from 'node:assert';\nassert.throws(() => parse(input) as never); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws(() => parse(input) as never);

`;

exports[`prefer-assert-throws-block > invalid(21): import assert from 'node:assert';\nassert.throws(() => parse(input) as never); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws(() => parse(input) as never);
    |                     ^^^^^^^^^^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	parse(input) as never;
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(22): import assert from 'node:assert';\nassert.throws((() => parse(input)) as () => void); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((() => parse(input)) as () => void);

`;

exports[`prefer-assert-throws-block > invalid(22): import assert from 'node:assert';\nassert.throws((() => parse(input)) as () => void); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((() => parse(input)) as () => void);
    |                      ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => {
  3 | 	parse(input);
  4 | }) as () => void);

`;

exports[`prefer-assert-throws-block > invalid(23): import assert from 'node:assert';\nassert.throws((() => parse(input))!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((() => parse(input))!);

`;

exports[`prefer-assert-throws-block > invalid(23): import assert from 'node:assert';\nassert.throws((() => parse(input))!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((() => parse(input))!);
    |                      ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => {
  3 | 	parse(input);
  4 | })!);

`;

exports[`prefer-assert-throws-block > invalid(24): import assert from 'node:assert';\nassert.throws((() => parse(input)) satisfies () => void); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.throws((() => parse(input)) satisfies () => void);

`;

exports[`prefer-assert-throws-block > invalid(24): import assert from 'node:assert';\nassert.throws((() => parse(input)) satisfies () => void); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.throws((() => parse(input)) satisfies () => void);
    |                      ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert';
  2 | assert.throws((() => {
  3 | 	parse(input);
  4 | }) satisfies () => void);

`;

exports[`prefer-assert-throws-block > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('nested', () => {\n\tassert.throws(() => parse(input), SyntaxError);\n}); 1`] = `

  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('nested', () => {
  4 | 	assert.throws(() => parse(input), SyntaxError);
  5 | });

`;

exports[`prefer-assert-throws-block > invalid(3): import test from 'node:test';\nimport assert from 'node:assert';\ntest('nested', () => {\n\tassert.throws(() => parse(input), SyntaxError);\n}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('nested', () => {
> 4 | 	assert.throws(() => parse(input), SyntaxError);
    | 	                    ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.
  5 | });

Output:
  1 | import test from 'node:test';
  2 | import assert from 'node:assert';
  3 | test('nested', () => {
  4 | 	assert.throws(() => {
  5 | 		parse(input);
  6 | 	}, SyntaxError);
  7 | });

`;

exports[`prefer-assert-throws-block > invalid(4): import assert from 'node:assert/strict';\nassert.throws(() => parse(input)); 1`] = `

  1 | import assert from 'node:assert/strict';
  2 | assert.throws(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(4): import assert from 'node:assert/strict';\nassert.throws(() => parse(input)); 2`] = `

Message:
  1 | import assert from 'node:assert/strict';
> 2 | assert.throws(() => parse(input));
    |                     ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import assert from 'node:assert/strict';
  2 | assert.throws(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(5): import * as assert from 'node:assert';\nassert.throws(() => parse(input)); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.throws(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(5): import * as assert from 'node:assert';\nassert.throws(() => parse(input)); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.throws(() => parse(input));
    |                     ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import * as assert from 'node:assert';
  2 | assert.throws(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(6): import {throws} from 'node:assert';\nthrows(() => parse(input)); 1`] = `

  1 | import {throws} from 'node:assert';
  2 | throws(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(6): import {throws} from 'node:assert';\nthrows(() => parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert';
> 2 | throws(() => parse(input));
    |              ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import {throws} from 'node:assert';
  2 | throws(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(7): import {throws} from 'node:assert/strict';\nthrows(() => parse(input)); 1`] = `

  1 | import {throws} from 'node:assert/strict';
  2 | throws(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(7): import {throws} from 'node:assert/strict';\nthrows(() => parse(input)); 2`] = `

Message:
  1 | import {throws} from 'node:assert/strict';
> 2 | throws(() => parse(input));
    |              ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import {throws} from 'node:assert/strict';
  2 | throws(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(8): import {throws as assertThrows} from 'node:assert';\nassertThrows(() => parse(input)); 1`] = `

  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(() => parse(input));

`;

exports[`prefer-assert-throws-block > invalid(8): import {throws as assertThrows} from 'node:assert';\nassertThrows(() => parse(input)); 2`] = `

Message:
  1 | import {throws as assertThrows} from 'node:assert';
> 2 | assertThrows(() => parse(input));
    |                    ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import {throws as assertThrows} from 'node:assert';
  2 | assertThrows(() => {
  3 | 	parse(input);
  4 | });

`;

exports[`prefer-assert-throws-block > invalid(9): import test from 'node:test';\ntest('t', t => { t.assert.throws(() => parse(input)); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(() => parse(input)); });

`;

exports[`prefer-assert-throws-block > invalid(9): import test from 'node:test';\ntest('t', t => { t.assert.throws(() => parse(input)); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('t', t => { t.assert.throws(() => parse(input)); });
    |                                        ^^^^^^^^^^^^ Use a block body for the \`assert.throws()\` callback.

Output:
  1 | import test from 'node:test';
  2 | test('t', t => { t.assert.throws(() => {
  3 | 	parse(input);
  4 | }); });

`;
